--- a/Training.Programming.FinalTask/Views/Clients/Details.cshtml
+++ b/Training.Programming.FinalTask/Views/Clients/Details.cshtml
@@ -42,6 +42,14 @@
             @Html.DisplayFor(model => model.Sex)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.ClientType)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ClientType)
+        </dd>
+
     </dl>
 </div>
 <p>
