--- a/Training.Programming.FinalTask/Views/Clients/Delete.cshtml
+++ b/Training.Programming.FinalTask/Views/Clients/Delete.cshtml
@@ -43,6 +43,14 @@
             @Html.DisplayFor(model => model.Sex)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.ClientType)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.ClientType)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
