--- a/Training.Programming.FinalTask/Views/Clients/Index.cshtml
+++ b/Training.Programming.FinalTask/Views/Clients/Index.cshtml
@@ -23,6 +23,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Sex)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.ClientType)
+        </th>
         <th></th>
     </tr>
 
@@ -39,6 +42,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Sex)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.ClientType)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.ClientId }) |
