Delete functionality added

--- a/Training.Programming.FinalTask/Views/Clients/CheckPrice.cshtml
+++ b/Training.Programming.FinalTask/Views/Clients/CheckPrice.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Training.Programming.FinalTask.Models.Client
 
 @{
-    ViewBag.Title = "Get price";
+    ViewBag.Title = "Get Price";
 }
 
-<h2>Get price</h2>
+<h2>Get Price</h2>
 
 <div>
     <h4>Client</h4>
@@ -45,6 +45,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ClientId }) |
+
     @Html.ActionLink("Back to List", "Index")
 </p>
