--- a/Training.Programming.FinalTask/Views/Home/Contact.cshtml
+++ b/Training.Programming.FinalTask/Views/Home/Contact.cshtml
@@ -5,13 +5,12 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    IF P&C Insurance<br />
+    Citadeles street<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    6582828288
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:iveta.zalite@if.lv">iveta.zalite@if.lv</a><br />
 </address>
