--- a/Training.Programming.FinalTask/Views/Home/Index.cshtml
+++ b/Training.Programming.FinalTask/Views/Home/Index.cshtml
@@ -3,5 +3,19 @@
 }
 
 <div class="jumbotron">
-    <h1>Final task for C# programming</h1>
+    <h1>Hello!</h1>
+    <h2>Do You need insurance?</h2>
+    <h3> You can buy it here </h3>
+	<h3> </h3>
+    <h3> </h3>
+    <h4>Please enter your personal data  </h4>
+<p>
+    @Html.ActionLink("Personal data", "Clients/Create")
+</p>
+
+<p>
+    @Html.ActionLink("My contacts", "Contact") |
+    @Html.ActionLink("About", "About")
+</p>
+
 </div>
