--- a/Training.Programming.FinalTask/Views/Home/About.cshtml
+++ b/Training.Programming.FinalTask/Views/Home/About.cshtml
@@ -2,6 +2,6 @@
     ViewBag.Title = "About";
 }
 <h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>This Web app created by Iveta Zālīte. 
+This is internal C# language training Home work </p>
