--- a/Training.Programming.FinalTask/Views/Home/Index.cshtml
+++ b/Training.Programming.FinalTask/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
     <h3> </h3>
     <h4>Please enter your personal data  </h4>
 <p>
-    @Html.ActionLink("Personal data", "Clients/Create")
+    @Html.ActionLink("Personal data", "Create")
 </p>
 
 <p>
