--- a/Training.Programming.FinalTask/Views/Clients/Delete.cshtml
+++ b/Training.Programming.FinalTask/Views/Clients/Delete.cshtml
@@ -11,6 +11,8 @@
     <h4>Client</h4>
     <hr />
     <dl class="dl-horizontal">
+        @Html.HiddenFor(model => model.ClientId)
+
         <dt>
             @Html.DisplayNameFor(model => model.Name)
         </dt>
