--- a/Training.Programming.FinalTask/Views/Home/Create.cshtml
+++ b/Training.Programming.FinalTask/Views/Home/Create.cshtml
@@ -1,10 +1,12 @@
-﻿@model Training.Programming.FinalTask.Models.Client
+﻿@using Training.Programming.FinalTask.Controllers
+@model Training.Programming.FinalTask.Models.Client
+
 
 @{
-    ViewBag.Title = "Create";
+    ViewBag.Title = "Your Peronal data";
 }
 
-<h2>Create</h2>
+<h2>Please enter your Personal data</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +14,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Client</h4>
+        <h4>Insurer:</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -48,12 +50,16 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.ClientType, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.ClientType, htmlAttributes: new {@class = "control-label col-md-2"})
             <div class="col-md-10">
-                @Html.EnumDropDownListFor(model => model.ClientType, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.ClientType, "", new { @class = "text-danger" })
+                @Html.EnumDropDownListFor(model => model.ClientType, htmlAttributes: new {@class = "form-control"})
+                @Html.ValidationMessageFor(model => model.ClientType, "", new {@class = "text-danger"})
             </div>
         </div>
+
+            <p>Please select Product from list</p>
+
+     
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
